--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "overwatch-hero-selector",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html -d build --public-url ."
@@ -11,7 +10,18 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.16.1",
+    "parcel": "^2.16.1",
     "parcel-bundler": "^1.12.5",
     "sass": "^1.89.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/snstkfkadkfka/overwatch.git"
+  },
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/snstkfkadkfka/overwatch/issues"
+  },
+  "homepage": "https://github.com/snstkfkadkfka/overwatch#readme"
 }
