--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "parcel index.html",
-    "build": "parcel build index.html -d build --public-url ."
+    "build": "parcel build index.html --public-url ./"
   },
   "keywords": [],
   "author": "",
